--- a/S2_P2_CS2_EX2.tex
+++ b/S2_P2_CS2_EX2.tex
@@ -2,7 +2,7 @@
 
 \usepackage{preamble}
 \usepackage{bytefield}
-\usepackage{minted}
+\usepackage{preamble_code}
 
 \title{Computer Science 2, Exercise 2}
 \date{Semester 2, 2023/2024}
