--- a/S2_P2_PHY1.tex
+++ b/S2_P2_PHY1.tex
@@ -1,8 +1,8 @@
 \documentclass[12pt]{extarticle}
 
 \usepackage{preamble}
+\usepackage{preamble_svg}
 \usepackage{siunitx}
-\usepackage{svg}
 
 \title{Physics 2 Notes, Partial 2}
 \date{Semester 2, 2023/2024}
