Convert excalidraw pngs to svgs

--- a/S2_P2_PHY1.tex
+++ b/S2_P2_PHY1.tex
@@ -486,7 +486,10 @@ In fact, it is possible to have systems where the torque is zero only if we choo
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\textwidth]{assets/S2_P2_PHY1/skew.png}
+    {
+        \virgil
+        \includesvg[width=0.5\textwidth]{assets/S2_P2_PHY1/skew.svg}
+    }
     \caption{A system where the angular momentum is not parallel to the angular velocity.}
     \label{fig:tensor-of-inertia}
 \end{figure}
@@ -745,7 +748,10 @@ Then when another particle's center enters the circle we have a collision: we ex
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\textwidth]{assets/S2_P2_PHY1/particle_collision.png}
+    {
+        \virgil
+        \includesvg[width=0.5\textwidth]{assets/S2_P2_PHY1/particle_collision.svg}
+    }
     \caption{Two particles colliding and the resulting angle $\alpha$}
 \end{figure}
 
